[package]
name = "lnrod"
version = "0.1.0"
authors = [
    "Dev Random",
    "Valentine Wallace <vwallace@protonmail.com>",
    "Ken Sedgwick <ken@bonsai.com>",
]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bugs = ["bugsalot"]
default = ["tor"]
tor = ["torut", "tokio-socks", "regex"]

[dependencies]
bugsalot = { version = "0.2", optional = true }

anyhow = "1.0"
base64 = "0.13.0"
bitcoin-bech32 = "0.7"
bech32 = "0.7"
hex = "0.3"
futures = "0.3.21"

log = { version="0.4.14", features = [ "std" ] }
once_cell = "1.7.2"
time = "0.2"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1.17", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time", "tracing" ] }
hyper = "0.14"
prost = "0.11"
tonic = "0.8"
clap = "=3.0.0-beta.2"  # later versions have deps which increase MSRV
toml = "0.5.8"
url = "2.3"

jsonrpc-async = "2.0.2"
serde = { version = "1.0.105", features = ["derive"] }
torut = { version = "0.2.1", optional = true, default-features = false, features = ["control", "v3"] }
tokio-socks = { version = "0.5.1", optional = true }
# sub-dep of torut - 1.4 increases MSRV
zeroize = { version = "=1.3.0", optional = true }
regex = { version = "1.5.4", optional = true }
tracing = { version = "0.1.32" }
tracing-subscriber = { version = "0.3.9" }
triggered = "0.1"
ctrlc = { version = "3.1", features = ["termination"] }

# TODO point this and the other rust-lightning deps at next release
[dependencies.lightning-net-tokio]
version = "0.0.113"
#git = "https://github.com/lightningdevkit/rust-lightning"
#rev = "af7c2920e1e5ae4ba3f522730e5cce99bedacc8c"
#path = "../rust-lightning/lightning-net-tokio"

[dependencies.lightning-rapid-gossip-sync]
version = "0.0.113"
#git = "https://github.com/lightningdevkit/rust-lightning"
#rev = "af7c2920e1e5ae4ba3f522730e5cce99bedacc8c"
#path = "../rust-lightning/lightning-rapid-gossip-sync"

[dependencies.lightning-background-processor]
version = "0.0.113"
#git = "https://github.com/lightningdevkit/rust-lightning"
#rev = "af7c2920e1e5ae4ba3f522730e5cce99bedacc8c"
#path = "../rust-lightning/lightning-background-processor"

[dependencies.lightning-persister]
version = "0.0.113"
#git = "https://github.com/lightningdevkit/rust-lightning"
#rev = "af7c2920e1e5ae4ba3f522730e5cce99bedacc8c"
#path = "../rust-lightning/lightning-persister"

[dependencies.lightning-block-sync]
version = "0.0.113"
#git = "https://github.com/lightningdevkit/rust-lightning"
#rev = "af7c2920e1e5ae4ba3f522730e5cce99bedacc8c"
#path = "../rust-lightning/lightning-block-sync"
features = ["rpc-client"]

[dependencies.vls-core]
features = ["std"]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5357446a4a44ec829e480b88a7fee3b2211f9129"
#path = "../vls/lightning-signer-core"

[dependencies.vls-server]
features = ["grpc"]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5357446a4a44ec829e480b88a7fee3b2211f9129" # VLS VERSION
#path = "../vls/lightning-signer-server"

[dependencies.vls-protocol-signer]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5357446a4a44ec829e480b88a7fee3b2211f9129"
#path = "../vls/vls-protocol-signer"

[dependencies.vls-protocol-client]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5357446a4a44ec829e480b88a7fee3b2211f9129"
#path = "../vls/vls-protocol-client"

[dependencies.vls-proxy]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5357446a4a44ec829e480b88a7fee3b2211f9129"
#path = "../vls/vls-proxy"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "lnrod"
path = "src/main_server.rs"

[[bin]]
name = "lnrcli"
path = "src/main_cli.rs"

[[bin]]
name = "test_onion_server"
path = "src/main_test_onion_server.rs"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
